# mcs-build

./: .gitignore  README.md
mcs-platform/: README.md  docker-compose.yaml  pyproject.toml
mcs-platform/docs/: api.md  api_examples.md  runbook.md  test_report.md
mcs-platform/gateway/: README.md
mcs-platform/gateway/nestjs-api/: README.md  package.json  tsconfig.json
mcs-platform/gateway/nestjs-api/src/: app.module.ts  main.ts
mcs-platform/gateway/nestjs-api/src/auth/: auth.guard.ts  auth.module.ts  auth.types.ts  jwt.strategy.ts
mcs-platform/gateway/nestjs-api/src/common/: constants.ts  errors.ts  logger.ts  types.ts
mcs-platform/gateway/nestjs-api/src/config/: config.service.ts  mcs-policy.yaml
mcs-platform/gateway/nestjs-api/src/policy/: policy.errors.ts  policy.guard.ts  policy.loader.ts  policy.module.ts  policy.service.ts  policy.types.ts
mcs-platform/gateway/nestjs-api/src/proxy/: proxy.module.ts  proxy.service.ts  proxy.types.ts
mcs-platform/gateway/nestjs-api/src/ratelimit/: ratelimit.guard.ts  ratelimit.module.ts  ratelimit.service.ts  ratelimit.types.ts
mcs-platform/gateway/nestjs-api/src/types/: express.d.ts
mcs-platform/gateway/nestjs-api/test/: auth.guard.spec.ts  e2e.spec.ts  policy.service.spec.ts  proxy.service.spec.ts  ratelimit.guard.spec.ts
mcs-platform/infra/k8s/: configmap.yaml  deployment.yaml  monitoring.yaml  namespace.yaml
mcs-platform/libs/contracts/: pyproject.toml
mcs-platform/libs/contracts/src/: __init__.py  masterdata.py  mcs_contracts.py  orchestrator.py  results.py
mcs-platform/libs/contracts/src/mcs_contracts/: __init__.py  common.py  email_event.py  orchestrator.py  results.py
mcs-platform/libs/contracts/tests/: test_schema_examples.py
mcs-platform/orchestrator/: README.md  alembic_listener.ini  alembic_masterdata.ini  pyproject.toml
mcs-platform/orchestrator/docker/: Dockerfile
mcs-platform/orchestrator/docs/: architecture.md  psycopg_dependency_analysis.md  redis_checkpoint_migration.md  redis_checkpoint_summary.md  test_checkpoint_analysis.md
mcs-platform/orchestrator/scripts/: migrate.ps1  test_checkpoint_init.ps1  test_redis_checkpoint_init.ps1  test_redis_checkpoint_init.py
mcs-platform/orchestrator/src/: errors.py  main.py  settings.py
mcs-platform/orchestrator/src/api/: deps.py  main.py  middleware.py  routes.py  schemas.py
mcs-platform/orchestrator/src/api/routes/: file.py  gateway.py  listener.py  masterdata.py  orchestration.py
mcs-platform/orchestrator/src/db/: engine.py  repo.py
mcs-platform/orchestrator/src/db/checkpoint/: postgres_checkpoint.py  redis_checkpoint.py
mcs-platform/orchestrator/src/db/migrations/: env.py
mcs-platform/orchestrator/src/gateway/: __init__.py  erp_client.py
mcs-platform/orchestrator/src/graphs/: registry.py
mcs-platform/orchestrator/src/graphs/sales_email/: README.md  graph.py  state.py
mcs-platform/orchestrator/src/internal/: __init__.py  repo.py
mcs-platform/orchestrator/src/internal/cache/: __init__.py  memory_cache.py  redis_cache.py
mcs-platform/orchestrator/src/internal/db/: __init__.py  engine.py  models.py
mcs-platform/orchestrator/src/listener/: __init__.py  repo.py  scheduler.py  utils.py
mcs-platform/orchestrator/src/listener/channel/: alimail.py  base.py  email.py  wechat.py
mcs-platform/orchestrator/src/listener/clients/: __init__.py  alimail_client.py
mcs-platform/orchestrator/src/listener/db/: __init__.py  engine.py  models.py
mcs-platform/orchestrator/src/listener/listeners/: alimail_listener.py  base.py  email.py  wechat.py
mcs-platform/orchestrator/src/listener/processors/: __init__.py  base.py  email.py  wechat.py
mcs-platform/orchestrator/src/observability/: langsmith.py  logging.py  metrics.py  monitoring.py
mcs-platform/orchestrator/src/services/: __init__.py  gateway_service.py  listener_service.py  masterdata_service.py  orchestration_service.py
mcs-platform/orchestrator/src/tools/: __init__.py  chatflow_templates.py  dify_client.py  file_server.py  mailer.py  masterdata_client.py  similarity.py
mcs-platform/orchestrator/tests/: test_chatflow_templates.py  test_checkpoint.py  test_graph_fail_paths.py  test_graph_happy_path.py  test_idempotency.py  test_manual_review_flow.py
mcs-platform/services/mcs-gateway/: README.md  pyproject.toml
mcs-platform/services/mcs-gateway/docker/: Dockerfile
mcs-platform/services/mcs-gateway/src/: __init__.py  errors.py  settings.py
mcs-platform/services/mcs-gateway/src/api/: main.py  routes.py
mcs-platform/services/mcs-gateway/src/clients/: __init__.py  erp.py
mcs-platform/services/mcs-listener/: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
mcs-platform/services/mcs-listener/docker/: Dockerfile
mcs-platform/services/mcs-listener/scripts/: docker-entrypoint.sh  install.ps1  install.sh  start.ps1  start.sh  test_config.py  test_email_listen.py  test_listen.py
mcs-platform/services/mcs-listener/src/: errors.py  orchestrator_client.py  scheduler.py  settings.py
mcs-platform/services/mcs-listener/src/api/: main.py  routes.py
mcs-platform/services/mcs-listener/src/clients/: __init__.py  alimail_client.py
mcs-platform/services/mcs-listener/src/db/: engine.py  models.py  repo.py
mcs-platform/services/mcs-listener/src/listeners/: __init__.py  alimail_listener.py  base.py  email.py  wechat.py
mcs-platform/services/mcs-listener/src/mcs_email_listener/: __init__.py  errors.py  fetcher.py  scheduler.py  settings.py
mcs-platform/services/mcs-listener/tests/: __init__.py
mcs-platform/services/mcs-masterdata/: alembic.ini  pyproject.toml
mcs-platform/services/mcs-masterdata/docker/: Dockerfile
mcs-platform/services/mcs-masterdata/src/: schemas.py
mcs-platform/services/mcs-orchestrator/: alembic.ini  pyproject.toml
mcs-platform/services/mcs-orchestrator/docker/: Dockerfile
mcs-platform/services/mcs-orchestrator/src/: errors.py  settings.py
mcs-platform/services/mcs-orchestrator/tests/: test_checkpoint.py  test_graph_fail_paths.py  test_graph_happy_path.py  test_idempotency.py  test_manual_review_flow.py  test_retry.py
(+183 files in other folders)
