[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcs-platform"
version = "0.1.0"
description = "MCS Platform - Monorepo workspace"
requires-python = ">=3.12"
readme = "README.md"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

