[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcs-contracts"
version = "0.1.0"
description = "MCS Platform - Shared data contracts (Pydantic models)"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "typing-extensions>=4.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"

[tool.hatch.build.targets.wheel]
# Install src/ directory as mcs_contracts package
# mcs_contracts.py re-exports everything from src/__init__.py
packages = ["src"]

