[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcs-listener"
version = "0.1.0"
description = "MCS Platform - Multi-channel Listener Service (Email, WeChat, etc.)"
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "aiosmtplib>=3.0.0",
    "apscheduler>=3.10.0",
    "httpx>=0.25.0",
    "sqlalchemy>=2.0.0",
    "psycopg[binary]>=3.1.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "alembic>=1.13.0",
    "mcs-contracts",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"

[tool.hatch.metadata]
# Allow direct references (file://) for local package dependencies
allow-direct-references = true

[tool.hatch.build.targets.wheel]
# Package structure: code is directly in src/ directory (flattened structure)
packages = ["src"]
